--- a/layouts/partials/header.social.meta.html
+++ b/layouts/partials/header.social.meta.html
@@ -8,4 +8,4 @@
 <meta name="twitter:image:src" content="/img/share.png">
 <meta name="twitter:image:width" content="500">
 <meta name="twitter:image:height" content="500">
-<meta name="twitter:domain" content="blog.kalel.dk">
+<meta name="twitter:domain" content="mad.kalel.dk">
