--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
 <header>
 	<nav>
 		<ul class="main">
-			<li><a href="http://blog.kalel.dk">{{ .Site.Title }}</a></li>
+			<li><a href="http://mad.kalel.dk">{{ .Site.Title }}</a></li>
 		</ul>
 		<ul class="social">
 			{{ if .RSSlink }}
